# FrameLift

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/: pull_request_template.md
.github/actions/install-qt/: action.yml
.github/actions/native-linux-setup/: action.yml
.github/actions/native-windows-setup/: action.yml
.github/hooks/: pre-commit
.github/workflows/: ci.yml
cmake/: FrameLiftBuiltinModules.cmake  FrameLiftDeps.cmake  FrameLiftHostIncludes.cmake  FrameLiftHostSources.cmake  FrameLiftMediaAudit.cmake  FrameLiftPackageMetadata.cmake  FrameLiftPlatformLibs.cmake  FrameLiftPluginMetadata.cmake  FrameLiftSdk.cmake  FrameLiftSdkConfig.cmake.in  FrameLiftSdkPackage.cmake  FrameLiftShaders.cmake  PrunePluginOutput.cmake
docs/: env-flags.md
modules/gfx/graphics-core/: GraphicsApi.h  GraphicsBackendFactory.cpp  GraphicsCore.Module.json  GraphicsSettings.h  IGraphicsBackend.h  IVideoRenderer.h  VideoFrameDesc.h  YuvToRgbMatrix.h
modules/gfx/opengl/: GlGraphicsBackend.cpp  GlGraphicsBackend.h  GlVideoRenderer.cpp  GlVideoRenderer.h  OpenGL.Module.json
modules/gfx/vulkan/: Vulkan.Module.json  VulkanCapabilityPlan.h  VulkanColorMapping.h  VulkanDeviceInfo.h  VulkanDeviceSelect.h  VulkanFrameBridgeState.h  VulkanGraphicsBackend.cpp  VulkanGraphicsBackend.h  VulkanQueueLock.h  VulkanRetireQueue.h  VulkanTextureRing.h  VulkanTimelineSignalState.h  VulkanUploadPolicy.h  VulkanUtil.h  VulkanVideoRenderer.cpp  VulkanVideoRenderer.h  VulkanVideoRendererYcbcr.cpp
modules/host/ai/: AI.Module.json  AIBackendLog.cpp  AIBackendLog.h  AIEngine.h  AIModelCatalog.cpp  AIModelCatalog.h  AIService.cpp  AIService.h  LlamaEngine.cpp
modules/host/audio/: Audio.Module.json  AudioSettings.h  FFmpegAudioFilter.cpp  FFmpegAudioFilter.h  FFmpegAudioOptions.h  FFmpegAudioOutput.cpp  FFmpegAudioOutput.h
modules/host/controls/: Controls.Module.json  CoreCommands.cpp  PlaybackControls.cpp  PlaybackControls.h
modules/host/fonts/: FontScan.cpp  FontScan.h  Fonts.Module.json
modules/host/frame-sampler/: FrameSampler.Module.json  FrameSamplerService.cpp  FrameSamplerService.h
modules/host/logging/: Log.cpp  LogBuffer.cpp  LogBuffer.h  LogRepeatCollapse.h  Logging.Module.json
modules/host/module-runtime/: ModuleContext.cpp  ModuleContext.h  ModuleRegistry.h  ModuleRuntime.Module.json  ModuleSettingsImpl.h  PackageConfig.cpp  PackageConfig.h  PackageLoader.cpp  PackageLoader.h  PackageResolver.cpp  PackageResolver.h  PluginConfig.h  PluginLoader.cpp  PluginLoader.h  PluginResolver.cpp  PluginResolver.h  Services.h  SettingsService.cpp
modules/host/playback/: DeferredSubtitlePreload.h  FFmpegClock.h  FFmpegError.h  FFmpegFilters.h  FFmpegHwDecode.cpp  FFmpegHwDecode.h  FFmpegLetterbox.h  FFmpegPacketQueue.h  FFmpegPlayer.cpp  FFmpegPlayer.h  FFmpegPlayerCommands.cpp  FFmpegPlayerInternal.h  FFmpegSeekPlan.h  (+25 more)
plugins/DebugOverlay/: DebugOverlay.cpp  DebugOverlay.h
plugins/Playlist/: Playlist.cpp
plugins/RemoteStream/: CMakeLists.txt  RemoteStream.cpp  RemoteStream.h
plugins/SettingsMenu/: SettingsMenu.cpp  SettingsMenu.h
plugins/ai-tagger/: AITagger.Plugin.json  AITagger.cpp  AITagger.h  AITagger.qml  AITaggerSettings.cpp  AITaggerSettings.h  AITaggerSettings.qml  CMakeLists.txt  HostAIBackend.cpp  HostAIBackend.h  InferenceBackend.h  LlamaBackend.cpp  ModelCatalog.cpp  ModelCatalog.h  ModelDownloader.cpp  ModelDownloader.h  SampleScheduler.cpp  SampleScheduler.h  TagStore.cpp  TagStore.h  TagTypes.h  TagWorker.cpp  TagWorker.h
plugins/benchmark/: Benchmark.Plugin.json  Benchmark.cpp  Benchmark.h  Benchmark.qml  BenchmarkSettings.cpp  BenchmarkSettings.h  BenchmarkSettings.qml  CMakeLists.txt
plugins/console/: Console.qml  ConsoleSettings.cpp  ConsoleSettings.h  ConsoleSettings.qml
plugins/context-menu/: CMakeLists.txt  ContextMenu.Plugin.json  ContextMenu.qml  ContextMenuContent.qml  ContextMenuModule.cpp  ContextMenuModule.h
plugins/dbviewer/: CMakeLists.txt  DBViewer.Plugin.json  DBViewer.cpp  DBViewer.h  DBViewer.qml
plugins/debug-overlay/: CMakeLists.txt  DebugOverlay.Plugin.json  DebugOverlay.cpp  DebugOverlay.h  DebugOverlay.qml
plugins/history/: CMakeLists.txt  History.Plugin.json  History.cpp  History.h  History.qml  HistorySettings.cpp  HistorySettings.h  HistorySettings.qml
plugins/log-viewer/: CMakeLists.txt  LogViewer.Plugin.json  LogViewer.cpp  LogViewer.h
plugins/overlay/: CMakeLists.txt  Overlay.Plugin.json  Overlay.qml
plugins/playlist/: CMakeLists.txt  Playlist.Plugin.json  Playlist.cpp  Playlist.h  Playlist.qml  PlaylistSettings.cpp  PlaylistSettings.h  PlaylistSettings.qml
plugins/remote-stream/: CMakeLists.txt  RemoteStream.Plugin.json  RemoteStream.cpp  RemoteStream.h  RemoteStream.qml
plugins/settings-menu/: AISettings.qml  AdvancedSettings.qml  AudioSettings.qml  CMakeLists.txt  CacheSettings.qml  FilesSettings.qml  GenericSettingsPage.qml  PlaybackSettings.qml  SettingsMenu.Plugin.json  SettingsMenu.cpp  SettingsMenu.h  SettingsMenu.qml  SettingsPluginsPage.qml  SubtitleSettings.qml  ThemeSettings.qml  UISettings.qml
plugins/updater/: CMakeLists.txt  Updater.Plugin.json
sdk/: README.md
sdk/package-template/: CMakeLists.txt
sdk/src/: KeyNames.cpp  Log.cpp  ModuleBase.cpp  Panel.cpp  Widgets.cpp  Window.cpp
src/: App.cpp  App.h  Cli.h  FrameLift.rc.in  HostSettings.cpp  HostSettings.h  QtEnvironment.h  Settings.h  SettingsMapping.h  TestMediaGenerator.cpp  TestMediaGenerator.h  TestMediaSpec.h  ThemeUtil.h  Version.h.in  main.cpp
src/ui/: UIContextImpl.cpp  UIContextImpl.h
tests/: CMakeLists.txt  FFmpegHwDecodeTests.cpp  PluginAbiTests.cpp  PluginSettingsTests.cpp  SettingsMappingTests.cpp  SettingsTests.cpp
tests/cmake/: BuiltinModuleGraphTest.cmake  PluginSourceBoundaryTest.cmake  PrunePluginOutputTest.cmake
tests/fakes/: FakeMediaPlayer.h
tests/integration/: FrameSamplerIntegrationTests.cpp
tests/module-entry/: ModuleEntryMultiTests.cpp  ModuleEntryNoRenderTests.cpp  ModuleEntryTests.cpp
tests/support/: GenerateFormatSwitchAudio.cmake  QtTestRunner.cpp  RunLaunchAndCheck.cmake  TempIni.h
(+264 files in other folders)
